0.83.6
  - Fixed freeze when trying to reboot the internal
    DOS when using a different code page and it is in
    CGA or EGA emulation modes. (Wengier)
  - Add menu item "Expanded memory (EMS)" under "DOS"
    menu to dynamically enable or disable EMS memory
    at run-time. You can now also modify EMS memory
    with CONFIG command from command-line. (Wengier)
  - Added config option "drive z hide files" (in [dos]
    section) to hide/remove files listed (separated by
    space) from the Z drive. (Wengier)
  - You can now add your own programs or files to the
    Z drive! Put your programs or files in the drivez
    directory located in the DOSBox-X program folder,
    and they will automatically appear on the Z drive,
    replacing built-in files if any. (Wengier).    
0.83.5
  - Windows installer now offers the option to upgrade
    the DOSBox-X config file (dosbox-x.conf) to the
    latest version format automatically while keeping
    users' current settings. It can also add a context
    menu for executables (.exe, .com, .bat), config
    files (.conf) and folders in the Windows Explorer
    so that you could quickly run or open them with
    DOSBox-X from the Windows Explorer. More icons
    are added to the DOSBox-X program group within the
    Start menu as well. (Wengier)
  - Added config option "startbanner" in [dosbox]
    section which if set to "false" would skip the
    welcome banner when DOSBox-X starts. Also added
    config option "fastbioslogo" which if set to "true"
    will skip the BIOS logo (replacing the command-line
    option -fastbootlogo). A new command-line option
    "-fastlaunch" is added to enable fast launch mode
    by skipping both the logo and the banner. (Wengier)
  - Added config option "ega per scanline hpel" in
    [dosbox] section to control whether EGA emulation
    latches hpel at display start (as VGA emulation
    does) or allows hpel to change per scanline.
    Setting the option to false is needed for some