@@ -1,4 +1,4 @@
 /*auto-generated*/
-#define UPDATED_STR "Sep 1, 2020 1:26:36pm"
-#define GIT_COMMIT_HASH "4a23b84"
+#define UPDATED_STR "Sep 6, 2020 9:43:13pm"
+#define GIT_COMMIT_HASH "866b3aa"
 #define COPYRIGHT_END_YEAR "2020"
