@@ -1,8 +1,11 @@
 0.83.6
+  - Improved the help message of MOUNT command. Also
+    added option -examples to show its usage examples,
+    similar to IMGMOUNT and IMGMAKE commands. (Wengier)
   - Fixed freeze when trying to reboot the internal
     DOS when using a different code page and it is in
     CGA or EGA emulation modes. (Wengier)
-  - Add menu item "Expanded memory (EMS)" under "DOS"
+  - Added menu item "Expanded memory (EMS)" under "DOS"
     menu to dynamically enable or disable EMS memory
     at run-time. You can now also modify EMS memory
     with CONFIG command from command-line. (Wengier)
